<resources>
    <string name="app_name">FICO</string>
    <string name="add_expense">Adicionar gasto</string>
    <string name="list_of_expenses">Lista de gastos</string>
    <string name="config">configurações</string>
    <string name="available">Disponivel</string>
    <string name="total_expenses">Despesa Total</string>
    <string name="add_value">Valor</string>
    <string name="add_description">Descrição</string>
    <string name="add_category">Categoria</string>
    <string name="add_date">Data</string>
    <string name="date_range">Intervalo de Data</string>
    <string name="save">Salvar</string>
    <string name="this_month_expense">Gasto do Mês</string>
    <string name="email">E-mail</string>
    <string name="empty_field_part_1_message">O campo</string>
    <string name="empty_field_part_2_message">está vazio, preencha-o</string>
    <string name="verification_email_success_message">Email de verificação enviado com sucesso.</string>
    <string name="verification_email_fail_message">Erro ao enviar email de verificação.</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="without_network_connection">Sem conexão com a internet</string>
    <string name="register_login_screen">Não tem uma conta? Cadastre-se</string>
    <string name="register">Cadastrar</string>
    <string name="name">Nome</string>
    <string name="available_per_month">Disponível  por mês</string>
    <string name="verification_email_message">E-mail de validação da conta enviado.\nVerificar caixa de e-mail.</string>
    <string name="resent_email">Reeviar email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="budget">Budget</string>
    <string name="budget_2">Orçamento</string>
    <string name="set_month_budget">Defina o Budget para o mês</string>
    <string name="home">Home</string>
    <string name="configurations">Configurações</string>
    <string name="logout">Sair</string>
    <string name="logout_message">Sair da conta?</string>
    <string name="add">Adicionar</string>
    <string name="list">Lista</string>
    <string name="title_home">Home</string>
    <string name="title_add_expense">AddExpense</string>
    <string name="installment_expense">Despesa Parcelada</string>
    <string name="installment_expense_short">Desp. Parcelada</string>
    <string name="installments">Parcelas</string>
    <string name="common_expense">Despesa Comum</string>
    <string name="filter">Filtro</string>
    <string name="forgot_my_password">Esqueci minha senha</string>
    <string name="send">Enviar</string>
    <string name="nav_header_description">Nav Header Description</string>
    <string name="name_nav_header">Nome</string>
    <string name="generate_spreadsheet">Gerar Planilha</string>
    <string name="import_expenses">Importar Gastos</string>
    <string name="import_installment_expenses">Importar Gastos Parcelados</string>
    <string name="understood">Entendido</string>
    <string name="expenses">Gastos</string>
    <string name="earnings">Ganhos</string>
    <string name="category_food">Comida</string>
    <string name="category_transport">Transporte</string>
    <string name="category_entertainment">Entretenimento</string>
    <string name="category_market">Mercado</string>
    <string name="category_education">Educação</string>
    <string name="category_gift">Presente</string>
    <string name="category_healthy">Saúde</string>
    <string name="category_games">Jogos</string>
    <string name="category_investment">Investimento</string>
    <string name="category_food_icon_file_name">category_icon_food</string>
    <string name="category_transport_icon_file_name">category_icon_transport</string>
    <string name="category_entertainment_icon_file_name">category_icon_entertainment</string>
    <string name="category_market_icon_file_name">category_icon_market</string>
    <string name="category_education_icon_file_name">category_icon_education</string>
    <string name="category_gift_icon_file_name">category_icon_gift</string>
    <string name="category_healthy_icon_file_name">category_icon_healthy</string>
    <string name="category_games_icon_file_name">category_icon_games</string>
    <string name="category_investment_icon_file_name">category_icon_investment</string>
    <string name="expense_per_month">Despesa por mês</string>
    <string name="title">title</string>
    <string name="image">image</string>
    <string name="description">description</string>
    <string name="button_state">button_state</string>
    <string name="purchase_date">Data da Compra</string>
    <string name="payment_date">Data de Pagamento</string>
    <string name="pay_with_credit_card">Pagar com cartão de crédito</string>
    <string name="day">Dia</string>
    <string name="expiration_day">Dia de vencimento</string>
    <string name="closing_day">Dia de fechamento</string>
    <string name="expiration">Vencimento</string>
    <string name="days_for_closing">Dias para o Fechamento</string>
    <string name="set_default_credit_card_success_message">Cartão de crédito padrão definido com sucesso</string>
    <string name="set_default_credit_card_fail_message">Falha ao definir cartão de crédito padrão</string>
    <string name="default_payment_date">Data de Pagamento Padrão</string>
    <string name="credit_card">Cartão de crédito</string>
    <string name="add_credit_card_success_message">Cartão de crédito adicionado com sucesso</string>
    <string name="edit_credit_card_success_message">Cartão de crédito atualizado com sucesso</string>
    <string name="delete_credit_card_success_message">Cartão de crédito excluído com sucesso</string>
    <string name="add_credit_card_fail_message">Falha ao adicionar cartão de crédito</string>
    <string name="edit_credit_card_fail_message">Falha ao atualizar cartão de crédito</string>
    <string name="delete_credit_card_fail_message">Falha ao excluir cartão de crédito</string>
    <string name="credit_card_name_with_tip">Nome do cartão (apelido)</string>
    <string name="credit_card_list">Lista de cartões</string>
    <string name="default_payment_day">Dia de Pagamento Padrão</string>
    <string name="define_default_payment_day">Definir dia padrão</string>
    <string name="use_credit_card_as_default">Usar cartão de crédito como padrão</string>
    <string name="default_day">Dia Padrão:</string>
    <string name="default_day_default_message">Dados Atuais: A definir</string>
    <string name="type_the_day">Digite o dia</string>
    <string name="invalid_day">Dia inválido</string>
    <string name="payment_day_info_message">Dados utilizados para facilitar a inclusão de compras feitas com cartão de crédito.\nInformar o dia de vencimento e quantos dias para o fechamento da fatura do cartão de crédito.</string>
    <string name="confirm">Confirmar</string>
    <string name="delete">Apagar</string>
    <string name="set_credit_card_as_default">Definir Cartão como padrão</string>
    <string name="delete_expense">Apagar Despesa</string>
    <string name="delete_credit_card">Apagar Cartão de Crédito</string>
    <string name="default_card">Cartão Padrão</string>
    <string name="set_default_credit_card_message">Definir este cartão como padrão?</string>
    <string name="delete_recurring_expense">Apagar Despesa Recorrente</string>
    <string name="delete_recurring_earning">Apagar Receita Recorrente</string>
    <string name="delete_earning">Apagar Receita</string>
    <string name="delete_installment_expense">Apagar Despesa Parcelada</string>
    <string name="delete_expense_dialog_message">Prosseguir com a exclusão desta despesa?</string>
    <string name="delete_credit_card_dialog_message">Prosseguir com a exclusão deste cartão de crédito?</string>
    <string name="delete_earning_dialog_message">Prosseguir com a exclusão desta receita?</string>
    <string name="default_budget_activity_title">Orçamento padrão</string>
    <string name="default_budget_tip_message">Definir qual será o limite de gasto padrão para todos os mesas sem definição de orçamento</string>
    <string name="change_default_budget_success_message">Orçamento padrão definido com sucesso</string>
    <string name="change_default_budget_failure_message">Falha ao definir o orçamento padrão</string>
    <string name="budget_per_month_activity_title">Orçamento por Mês</string>
    <string name="budget_per_month_item_list">Orçamento por mês</string>
    <string name="edit_budget">Editar Orçamento</string>
    <string name="type_new_budget">Digite o novo orçamento</string>
    <string name="define_default_budget_title">Definir orçamento padrão</string>
    <string name="redefine_month_budget_success_message">Orçamento redefinido com sucesso</string>
    <string name="redefine_month_budget_failure_message">Falha ao redefinir o orçamento</string>
    <string name="budget_configuration_list">Orçamento</string>
    <string name="recurring_transactions_configuration_list">Transações Recorrentes</string>
    <string name="cancel">Cancelar</string>
    <string name="imports_from_file_history">Histórico de importações de transações</string>
    <string name="imports_from_file_history_activity_title">Importações de transações</string>
    <string name="close">Fechar</string>
    <string name="transactions">Transações</string>
    <string name="overview">Visão Geral</string>
    <string name="add_income">Adicionar Receita</string>
    <string name="add_expense_title">Adicionar Despesa</string>
    <string name="category_list_description_food">Comida</string>
    <string name="category_list_description_transport">Transporte</string>
    <string name="category_list_description_entertainment_1">Entretenimento</string>
    <string name="category_list_description_entertainment_2">Entretenimento </string>
    <string name="category_list_description_market">Mercado</string>
    <string name="category_list_description_education_1">Educação</string>
    <string name="category_list_description_education_2">Estudo</string>
    <string name="category_list_description_gift">Presente</string>
    <string name="category_list_description_healthy">Saúde</string>
    <string name="category_list_description_games">Jogos</string>
    <string name="category_list_description_investment">Investimento</string>
    <string name="category_list_description_eletronics_1">Eletrônicos</string>
    <string name="category_list_description_eletronics_2">Eletronicos</string>
    <string name="category_list_description_repair">Conserto</string>
    <string name="category_list_description_acessories">Acessórios</string>
    <string name="category_list_description_clothing">Roupa</string>
    <string name="category_list_description_car">Carro</string>
    <string name="category_list_description_motorcycle">Moto</string>
    <string name="category_list_description_trip">Viagem</string>
    <string name="category_list_description_house">Casa</string>
    <string name="category_list_description_donation">Doação</string>
    <string name="category_list_description_pets">Pets</string>
    <string name="category_list_description_fees">Juros</string>
    <string name="category_list_description_gym">Academia</string>
    <string name="category_list_description_cellphone">Celular</string>
    <string name="category_list_description_personal_hygiene_1">Higiene Pessoal</string>
    <string name="category_list_description_personal_hygiene_2">Higiene pessoal</string>
    <string name="category_list_description_pharmacy">Farmácia</string>
    <string name="category_list_description_cash_withdrawal_1">Saque de Dinheiro</string>
    <string name="category_list_description_cash_withdrawal_2">Saque de dinheiro</string>
    <string name="category_list_description_ride">Passeio</string>
    <string name="category_list_description_payment">Pagamento</string>
    <string name="category_list_description_services">Serviços</string>
</resources>