<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.fico.presentation.fragments.home.HomeFragment"
        android:label="@string/overview"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_add_expense"
        android:name="com.example.fico.presentation.fragments.add_transaction.AddTransactionFragment"
        android:label="@string/add_expense_title"
        tools:layout="@layout/fragment_add_transaction" />

    <fragment
        android:id="@+id/navigation_expense_list"
        android:name="com.example.fico.presentation.fragments.transaction_list.TransactionListFragment"
        android:label="@string/transactions"
        tools:layout="@layout/fragment_transaction_list" />

    <fragment
        android:id="@+id/navigation_config"
        android:name="com.example.fico.presentation.fragments.TransactionConfigurationFragment"
        android:label="@string/configurations"
        tools:layout="@layout/fragment_configuration" />
</navigation>