<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddExpenseActivity"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/et_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_value"
        android:digits="0,1,2,3,4,5,6,7,8,9,."
        android:inputType="numberDecimal"
        />

    <EditText
        android:layout_marginTop="32dp"
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_description"
        />

    <EditText
        android:layout_marginTop="32dp"
        android:id="@+id/et_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_category"
        />

    <EditText
        android:layout_marginTop="32dp"
        android:id="@+id/et_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_date"
        android:inputType="date"
        />

    <Button
        android:id="@+id/bt_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add_save"/>

</LinearLayout>