<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ui.fragments.expense.SetMonthBudget">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/set_month_budget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:layout_marginTop="16dp"
        android:id="@+id/et_budget"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/budget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <Button
        android:layout_marginTop="16dp"
        android:id="@+id/bt_save"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_budget" />

</androidx.constraintlayout.widget.ConstraintLayout>