<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@color/blue_300"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_header_profile_image"
        android:backgroundTint="@color/grey_200"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="75dp">
        <ImageView
            android:id="@+id/iv_header_profile_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/nav_header_description"
            app:srcCompat="@mipmap/app_icon_round" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nv_header_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/name_nav_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
        android:id="@+id/nv_header_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />
</LinearLayout>