<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/tv_total_expenses"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/total_expenses"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_total_expenses_this_month"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_total_expenses_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:text="R$45,00"
        app:layout_constraintEnd_toEndOf="@id/tv_total_expenses"
        app:layout_constraintStart_toStartOf="@id/tv_total_expenses"
        app:layout_constraintTop_toBottomOf="@id/tv_total_expenses"
        tools:text="R$45975,00"
        android:inputType="textPassword"
        android:drawablePadding="8dp"
        app:drawableEndCompat="@drawable/ic_visibility_off_24" />

    <TextView
        android:id="@+id/tv_total_expenses_this_month"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/this_month_expense"
        app:layout_constraintStart_toEndOf="@id/tv_total_expenses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_total_expenses_this_month_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@id/tv_total_expenses_this_month"
        app:layout_constraintStart_toStartOf="@id/tv_total_expenses_this_month"
        app:layout_constraintTop_toBottomOf="@id/tv_total_expenses_this_month"
        tools:text="R$792,43"/>

    <TextView
        android:id="@+id/tv_available_this_month"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/available"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_expenses_value" />

    <TextView
        android:id="@+id/tv_available_this_month_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@id/tv_available_this_month"
        app:layout_constraintStart_toStartOf="@id/tv_available_this_month"
        app:layout_constraintTop_toBottomOf="@id/tv_available_this_month"
        tools:text="R$500,00"/>


    <Button
        android:id="@+id/bt_add_expenses"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/add_expense"
        app:layout_constraintBottom_toTopOf="@id/bt_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_list"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/list_of_expenses"
        app:layout_constraintBottom_toTopOf="@id/bt_config"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_add_expenses" />

    <Button
        android:id="@+id/bt_config"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/config"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_list" />

</androidx.constraintlayout.widget.ConstraintLayout>