<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activities.VerifyEmailActivity">

    <ImageView
        android:id="@+id/iv_send_email"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/email_color_24"
        app:layout_constraintBottom_toTopOf="@id/tv_message_email_verification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_message_email_verification"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/verification_email_message"
        app:layout_constraintTop_toBottomOf="@id/iv_send_email"
        app:layout_constraintBottom_toTopOf="@id/cl_butons_verify_email_activity"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@id/tv_message_email_verification"
        android:id="@+id/cl_butons_verify_email_activity"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/bt_resent_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resent_email"
            app:layout_constraintEnd_toStartOf="@id/bt_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/bt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/bt_resent_email"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>